# devops

./: .gitignore  .gitmodules  README.md  Vagrantfile  pyproject.toml
ansible/: README.md  ansible.cfg  inventory.yml
ansible/playbooks/: README.md  node_exporter.yml  puppet_agent.yml  puppet_server.yml
ansible/roles/node_exporter/: README.md
ansible/roles/node_exporter/defaults/: main.yml
ansible/roles/node_exporter/meta/: main.yml
ansible/roles/puppet_agent/: README.md
ansible/roles/puppet_common/: README.md
ansible/roles/puppet_server/: README.md
app/: Dockerfile  Jenkinsfile  ci.Dockerfile  docker-compose.yml
app/prisma/: schema.prisma
argocd/todo/: values.yaml
argocd/todo/templates/: gogs-endpoint.yaml  gogs-service.yaml
gogs/: docker-compose.yaml  docker-compose.yml
gogs/common/config/gogs/: app.ini
gogs/config/: .env.sample  app.ini
harbor/: docker-compose.yml  harbor.yml  harbor.yml.tmpl  prepare
jenkins/: docker-compose.yml
jenkins/agent/: .env.sample  Dockerfile  entrypoint.sh
jenkins/controller/: Dockerfile  jenkins.yaml  plugins.txt
jenkins/controller/jobs/: todo.groovy
k8s/: master.sh  provision.sh  worker.sh
prepper/: docker-compose.yml
prepper/pipelines/: fluentbit.yaml
provision/agent/: install.py
provision/agent/templates/: puppet-agent.conf.j2
provision/ansible/: inventory.yml
provision/ansible/playbooks/: puppet_agent.yml  puppet_server.yml  site.yml
provision/server/: install.py
provision/server/templates/: apt-puppetcore-puppet.conf.j2  puppet_repo.list.j2  routes.yaml.j2
puppet/: environments
(+101 files in other folders)
