[project]
name = "devops"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Ivan Krasnopolsky",email = "i1.krasnopolskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
ansible = "^11.3.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = "^25.1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
